Modified a great amount of files to supress warnings mainly on rawtypes and unchecked and update some deprecated code. Modified bash scripts to only compile the needed files.